--- a/style.css
+++ b/style.css
@@ -20,26 +20,25 @@ nav {
 }
 body {
     font-family: 'Arial','helvetica Neue', Arial, Helvetica, sans-serif;
-    color: '#777';
+    color: #777;
     background: #777;
     font-size:'18px';
 }
 
 .container {
     margin-top: 10px;
+    margin-bottom: 151px;
 }
 
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
 
 section {
     float: left;
-    width: 495px;
+    width: 485px;
     background: #ebebeb;
     text-align: center;
+    padding-left: 5px ;
+    padding-right: 5px;
+    overflow: hidden;
 }
 
 
@@ -48,16 +47,18 @@ article {
     background: #777;
     font-size: 12px;
     font-weight: normal;
-    display:block;
+
+}
+
+
 }
 
 aside {
     background: #ebebeb;
     text-align: center;
-    width: 350px;
+    width: 455px;
     float: left;
-    margin-left: 15px;
-    padding: 50px;
+    margin-left: 10px;
 }
 
 
@@ -68,10 +69,15 @@ h1 {
     font-weight: normal;
 }
 
+p {
+    font-size: 14px;
+    font-weight: normal;
+}
+
 footer {
     background: #ebebeb;
     text-align: center;
     clear: both;
     padding: 20px;
-    
+    border: 10px;    
 }
