--- a/style.css
+++ b/style.css
@@ -30,15 +30,21 @@ body {
     margin-bottom: 151px;
 }
 
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
 
 section {
     float: left;
-    width: 485px;
+    width: 475px;
     background: #ebebeb;
     text-align: center;
-    padding-left: 5px ;
-    padding-right: 5px;
-    overflow: hidden;
+    padding-left: 10px ;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -46,12 +52,18 @@ article {
     color: #ebebeb;
     background: #777;
     font-size: 12px;
-    font-weight: normal;
+    position: relative;
+    padding: 5px;
+    margin-top: 10px;
 
 }
 
+.Subarticle {
+    position: absolute;
+    padding: 20px;
 
-}
+    }
+
 
 aside {
     background: #ebebeb;
@@ -59,7 +71,13 @@ aside {
     width: 455px;
     float: left;
     margin-left: 10px;
+    padding-bottom: 216px;
 }
+
+h3 { 
+    font-weight:normal; 
+}
+
 
 
 h1 {
@@ -72,12 +90,21 @@ h1 {
 p {
     font-size: 14px;
     font-weight: normal;
+    color: #777;
+    background: #ebebeb;
+    padding: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
+
+
 
 footer {
     background: #ebebeb;
     text-align: center;
     clear: both;
     padding: 20px;
-    border: 10px;    
+    border: 10px; 
+    margin-top: 10px;   
 }
